--- a/src/css/Update.css
+++ b/src/css/Update.css
@@ -101,6 +101,7 @@ label {
 
 .forgot {
     font-family: 'Bacasime Antique', sans-serif;
+    background-color: rgba(0, 0, 0, 0.63);
 }
 
 @media only screen and (min-width:900px) {
