--- a/src/css/Welcome.css
+++ b/src/css/Welcome.css
@@ -10,7 +10,8 @@
 
 .pincode {
     font-family: 'Bacasime Antique', sans-serif;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    font-size: larger;
 }
 
 
@@ -19,4 +20,5 @@
     #welcome {
         font-size: 4.5rem;
     }
+
 }
