--- a/src/css/index.css
+++ b/src/css/index.css
@@ -51,4 +51,7 @@ button:focus-visible {
 }
 
 
-
+.pincodeError {
+  color: rgb(71, 38, 38); 
+  background-color: rgba(255, 255, 255, 0.678);
+}
